--- a/src/main/resources/application-datasource.yaml
+++ b/src/main/resources/application-datasource.yaml
@@ -3,7 +3,7 @@ spring:
     username: root
     password: 123456
     #开启批量执行    &rewriteBatchedStatements=true
-    url: jdbc:mysql://localhost:3306/mybatis_plus?useUnicode=true&amp&characterEncoding=utf-8&serverTimezone=UTC&rewriteBatchedStatements=true
+    url: jdbc:mysql://host.docker.internal:3306/mybatis_plus?useUnicode=true&amp&characterEncoding=utf-8&serverTimezone=UTC&rewriteBatchedStatements=true
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 #配置日志
