--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: Deploy Photo judge with Docker
 on:
   push:
     branches: [main] # 当代码推送到 main 分支时触发
-  pull_request:
-    branches: [main] # 当有拉取请求合并到 main 分支时触发
+#  pull_request:
+#    branches: [main] # 当有拉取请求合并到 main 分支时触发
 
 jobs:
   deploy:
