--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,7 @@ jobs:
           docker run -d \
             --name photo-app \
             -p 8089:8089 \
+            --add-host host.docker.internal:host-gateway \ # 映射宿主机 ip 到容器内部
             photo-app:latest
 
       # 第七步：清理旧的悬挂 Docker 镜像
