--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
 
     <properties>
         <java.version>17</java.version>
+        <mapstruct.version>1.5.2.Final</mapstruct.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -76,6 +78,18 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>2.0.57</version>
+        </dependency>
+        <!-- mapstruct 依赖, 注意不同的 Lombok 的引入, 对 mapstruct 是有影响的 -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <!-- mapstruct-processor 必须位于 Lombok 的后面  -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
         </dependency>
     </dependencies>
 
