--- a/src/main/resources/application-datasource-remote.yaml
+++ b/src/main/resources/application-datasource-remote.yaml
@@ -1,11 +1,33 @@
 spring:
+    # mysql 配置
   datasource:
     username: root
     password: 123456
     #开启批量执行    &rewriteBatchedStatements=true
     url: jdbc:mysql://host.docker.internal:3306/photo?useUnicode=true&amp&characterEncoding=utf-8&serverTimezone=UTC&rewriteBatchedStatements=true
-
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+    # redis 配置
+    data:
+      redis:
+        # 使用 docker 对宿主机的映射
+        host: host.docker.internal
+        port: 6379
+        connect-timeout: 3000ms
+        # lettuce 连接池配置
+        lettuce:
+          pool:
+            enabled: true
+            # 最大连接数
+            max-active: 1000
+            # 连接池最大空闲数
+            max-idle: 100
+            # 最小连接数
+            min-idle: 10
+            # 连接池最大等待时间, 当 Redis 连接池没有可用的连接的时候的最大等待时间，超过等待时间则抛出异常, 负数为一直等待，不建议
+            max-wait: 3000ms
+
+
 
 #配置日志
 mybatis-plus:
