1. 增加 quartz 定时器 2. 增加 SpringUtil，可以获取 Bean 3. 完善 MapStructure，可以使用

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,11 @@ spring:
     active: "datasource-local"
   application:
     name: "photo-judge-backend"
+  quartz:
+    job-store-type: jdbc
+    # 配置不自动初始化表
+    jdbc:
+      initialize-schema: never
 server:
   port: 8089
   servlet:
