--- a/src/main/resources/application-datasource-local.yaml
+++ b/src/main/resources/application-datasource-local.yaml
@@ -8,6 +8,23 @@ spring:
     url: jdbc:mysql://localhost:3306/photo?useUnicode=true&amp&characterEncoding=utf-8&serverTimezone=UTC&rewriteBatchedStatements=true
 
     driver-class-name: com.mysql.cj.jdbc.Driver
+    # hikariPool 数据库连接池
+    hikari:
+      # 客户端等待来自池的连接的最大毫秒数
+      connection-timeout: 60000
+      # 控制将测试连接的活动性的最长时间
+      validation-timeout: 3000
+      # 控制允许连接在池中保持空闲状态的最长时间
+      idle-timeout: 60000
+      login-timeout: 5
+      # 控制池中连接的最大生存期
+      max-lifetime: 60000
+      # 控制允许池达到的最大大小，包括空闲和使用中的连接
+      maximum-pool-size: 10
+      # 控制HikariCP尝试在池中维护的最小空闲连接数
+      minimum-idle: 5
+      # 控制默认情况下从池获得的连接是否处于只读模式
+      read-only: false
 
   # redis 配置
   data:
